@@ -60,8 +60,11 @@ object Isabelle_Logic
 
   def session_args(): List[String] =
   {
-    val modes = space_explode(',', Isabelle_System.getenv("JEDIT_PRINT_MODE")).map("-m" + _)
-    modes ::: List("-r", "-q", jedit_logic())
+    val modes =
+      space_explode(',', PIDE.options.string("jedit_print_mode")) :::
+      space_explode(',', Isabelle_System.getenv("JEDIT_PRINT_MODE"))
+
+    modes.map("-m" + _) ::: List("-r", "-q", jedit_logic())
   }
 
   def session_dirs(): List[Path] = Path.split(Isabelle_System.getenv("JEDIT_SESSION_DIRS"))
